# Netlist

./: .gitignore  CONTRIBUTING.md  LICENSE  pyproject.toml  readme.md  tmp_Netlist_ngspice
.cursor/plans/: xschem_export_dialect_270ae885.plan.md
docs/: internal_representation.md
examples/spectre_to_ngspice/parameters/: convert.py  in.scs  out.spice
examples/spectre_to_ngspice/statistics/: convert.py  in.scs  out.spice
examples/spectre_to_ngspice/subckts/: convert.py  in.scs  out.spice
examples/spectre_to_xyce/bsources/: convert.py  in.scs  out.cir  test_xyce.cir
examples/spectre_to_xyce/parameters/: convert.py  in.scs  out.cir  xyce_parameters.cir
examples/spectre_to_xyce/statistics/: convert.py  out.cir  spectre_statistics.scs  xyce_statistics.cir
examples/xschem_bridge_example/: README.md  open_in_xschem.sh  test_xschem_symbols.py  xschem_bridge_example.py
netlist/: __init__.py  ast_to_cst.py  compile.py  convert.py  data.py  lex.py  parse.py  transform.py
netlist/dialects/: __init__.py  base.py  spectre.py  spice.py  xyce.py
netlist/write/: __init__.py  base.py  batch_symbol_generator.py  primitive_detector.py  spectre.py  spice.py  symbol_matcher.py  testgen.py  xschem.py  xschem_schematic.py  xschem_symbol.py  xyce.py
tests/: test_expr_associativity.py  test_netlist.py  test_xyce_bsim4_bin_bounds.py  test_xyce_model_suffixes.py
tests/integration/: test_conversions.py  test_xschem.py  test_xyce_parser_integration.py
tests/unit/: test_data.py  test_parser.py  test_transform.py  test_writer.py  test_xyce_mutual_inductor_writer.py  test_xyce_parser.py
(+21 files in other folders)
