[tool.poetry]
name = "Netlist"
version = "0.1.0"
description = "Circuit Netlist Generation and Parsing"
authors = ["Dan Fritchman <dan@fritch.mn>", "Nathan Slager <slagernate@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pydantic = "^1.7.3"
packaging = "^22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
poethepoet = "^0.9.0"
black = "^24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
